Remove border around hunter/prey on observer html file.

--- a/Observers/elm/observer.html
+++ b/Observers/elm/observer.html
@@ -6133,7 +6133,7 @@ var $author$project$Main$view = function (model) {
 								$elm$html$Html$div,
 								_List_fromArray(
 									[
-										$author$project$Main$tw('w-full border-2 border-white flex items-center flex-col text-center p-4')
+										$author$project$Main$tw('w-full flex items-center flex-col text-center p-4')
 									]),
 								_List_fromArray(
 									[
@@ -6418,7 +6418,7 @@ var $author$project$Main$view = function (model) {
 								$elm$html$Html$div,
 								_List_fromArray(
 									[
-										$author$project$Main$tw('w-full border-2 border-white flex items-center flex-col text-center p-4')
+										$author$project$Main$tw('w-full flex items-center flex-col text-center p-4')
 									]),
 								_List_fromArray(
 									[
