--- a/Observers/elm/index.html
+++ b/Observers/elm/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Main</title>
+  <title>Evasion</title>
   <style>body { padding: 0; margin: 0; }</style>
 	<script src="https://cdn.tailwindcss.com"></script>
 </head>
