--- a/Observers/elm/public/index.html
+++ b/Observers/elm/public/index.html
@@ -12,7 +12,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Elm App</title>
+    <title>Evasion</title>
 </head>
 <body>
     <noscript>
