Cosmetic fix: history scollbara added if history gets too long.

--- a/Observers/elm/index.html
+++ b/Observers/elm/index.html
@@ -671,6 +671,11 @@ video {
   overflow: auto;
 }
 
+.max-h-90vh {
+	padding-right: 0.55rem;	
+	max-height: 90vh;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -7402,7 +7407,7 @@ var $author$project$Main$view = function (model) {
 						$elm$html$Html$div,
 						_List_fromArray(
 							[
-								$author$project$Main$tw('h-full w-72 mr-8 overflow-auto')
+								$author$project$Main$tw('h-full w-72 mr-8 overflow-auto max-h-90vh')
 							]),
 						_List_fromArray(
 							[
