Hotfix: fix Observer Christmas edition displayed wall width.

--- a/Observers/elm-christmas/index.html
+++ b/Observers/elm-christmas/index.html
@@ -6516,7 +6516,7 @@ var $author$project$Main$viewWall = function (wall) {
 				$elm$html$Html$Attributes$style,
 				'height',
 				$author$project$Main$pct(
-					(A2($author$project$Main$toTopValue, wall.y2, $author$project$Main$wallWidth) - A2($author$project$Main$toTopValue, wall.y1, $author$project$Main$wallWidth)) + $author$project$Main$dotWidth)),
+					(A2($author$project$Main$toTopValue, wall.y2, $author$project$Main$wallWidth) - A2($author$project$Main$toTopValue, wall.y1, $author$project$Main$wallWidth)) + 0.33)),
 				A2(
 				$elm$html$Html$Attributes$style,
 				'width',
@@ -6541,7 +6541,7 @@ var $author$project$Main$viewWall = function (wall) {
 				$elm$html$Html$Attributes$style,
 				'width',
 				$author$project$Main$pct(
-					(A2($author$project$Main$toLeftValue, wall.x2, $author$project$Main$wallWidth) - A2($author$project$Main$toLeftValue, wall.x1, $author$project$Main$wallWidth)) + $author$project$Main$dotWidth)),
+					(A2($author$project$Main$toLeftValue, wall.x2, $author$project$Main$wallWidth) - A2($author$project$Main$toLeftValue, wall.x1, $author$project$Main$wallWidth)) + 0.33)),
 				A2(
 				$elm$html$Html$Attributes$style,
 				'height',
@@ -7033,7 +7033,7 @@ var $author$project$Main$view = function (model) {
 										$elm$html$Html$div,
 										_List_fromArray(
 											[
-												$author$project$Main$tw('w-full flex items-center flex-col text-center p-4')
+												$author$project$Main$tw('w-full flex items-center flex-col text-center p-4 mb-4')
 											]),
 										_List_fromArray(
 											[
@@ -7143,7 +7143,7 @@ var $author$project$Main$view = function (model) {
 																$elm$html$Html$div,
 																_List_fromArray(
 																	[
-																		$author$project$Main$tw('text-left w-24 mr-8')
+																		$author$project$Main$tw('text-left w-24 mr-8 mb-4')
 																	]),
 																_List_fromArray(
 																	[
